Fix ng-invalid not showing red outline.

--- a/webview-ui/grepc-webview/src/styles.css
+++ b/webview-ui/grepc-webview/src/styles.css
@@ -54,9 +54,7 @@ app-occurrence {
 }
 
 .rule-id {
-    display: inline-flex;
     gap: 0.25em;
-    max-width: 8em;
 }
 
 .rule-container {
@@ -106,6 +104,7 @@ app-occurrence {
 
 .ng-invalid {
     border-color: red !important;
+    outline-color: red !important;
 }
 
 .codicon {
